--- a/src/Presentation/SmartStore.Web/Views/Shared/_Notifications.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Notifications.cshtml
@@ -6,8 +6,8 @@
         $(function () {
         	var items = $("#notification-list").find("> .msg");
         	var titles = {
-        		info: '@T("Common.Note").Text',
-        		success: '@T("Common.Notification").Text',
+        		info: undefined,
+        		success: undefined,
         		warning: '@T("Common.Warning").Text',
         		error: '@T("Common.Error").Text'
         	};
