--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -54,7 +54,7 @@
     
     <div class="alert alert-info fade in">
         <button class="close" data-dismiss="alert">x</button>
-        <p style="font-weight: bold">@T("Admin.Configuration.Plugins.Description")</p>
+        <h4>@T("Admin.Configuration.Plugins.Description")</h4>
         <ol>
             <li>@Html.Raw(T("Admin.Configuration.Plugins.Description.Step1", "uploadpackage", "#uploadpackage-window"))</li>
             <li>@Html.Raw(T("Admin.Configuration.Plugins.Description.Step2"))</li>
