--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -14,7 +14,7 @@
     
     <div class="section-header">
         <div class="title">
-            <i class="fa fa-cogs"></i>
+            <i class="fa fa-puzzle-piece"></i>
             @T("Admin.Configuration.Plugins")
         </div>
         <div class="options">
