--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/select2.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/select2.less
@@ -45,8 +45,8 @@ Source: https://github.com/ivaynberg/select2
     overflow: hidden;
     white-space: nowrap;
     position: relative;
-    height: 26px;
-    line-height: 26px;
+    height: @baseLineHeight + 8;
+    line-height: @baseLineHeight + 8;
     padding: 0 0 0 8px;
     text-decoration: none;
     
