--- a/src/Presentation/SmartStore.Web/Administration/Content/variables.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/variables.less
@@ -38,7 +38,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c; // #21759b; // #0057a3;
+@linkColor:             #3276b1; //#08c; // #21759b; // #0057a3;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -70,9 +70,9 @@
 @paddingSmall:          2px 10px;  // 26px
 @paddingMini:           1px 6px;   // 24px
 
-@baseBorderRadius:      3px;
-@borderRadiusLarge:     6px;
-@borderRadiusSmall:     3px;
+@baseBorderRadius:      2px;
+@borderRadiusLarge:     2px;
+@borderRadiusSmall:     0;
 
 
 // Tables
