--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/AllSettings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/AllSettings.cshtml
@@ -28,14 +28,14 @@
                     })
                     .Columns(columns =>
                     {
-						columns.Bound(x => x.Name);
-                        columns.Bound(x => x.Value);
-						columns.Bound(x => x.Store).EditorTemplateName("Store");
+						columns.Bound(x => x.Name).Width("25%");
+						columns.Bound(x => x.Value).Width("55%").EditorTemplateName("MultilineText");
+						columns.Bound(x => x.Store).EditorTemplateName("Store").Width("15%");
                         columns.Command(commands =>
                         {
                             commands.Edit().Localize(T);
                             commands.Delete().Localize(T);
-                        }).Width(220);
+                        });
 
                     })
                     .ToolBar(x => x.Insert())
