--- a/src/Presentation/SmartStore.Web/Content/font-awesome.css
+++ b/src/Presentation/SmartStore.Web/Content/font-awesome.css
@@ -7,7 +7,10 @@
 @font-face {
   font-family: 'FontAwesome';
   src: url('fonts/fontawesome-webfont.eot?v=4.1.0');
-  src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg'), url('fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), url('fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype');
+  src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), 
+		url('fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg'),
+		url('fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), 
+		url('fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
