Amazon Pay: Review... some refactoring

--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
@@ -259,8 +259,11 @@
         if (Model.IsEditable)
         {
         <div class="addon-buttons">
-            @*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express)*@
-            @Html.Partial("_ButtonPaymentMethod", Model)
+            @*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express, Pay with Amazon)*@
+			@foreach(var item in Model.ButtonPaymentMethods.Items)
+			{
+				@Html.Action(item.ActionName, item.ControllerName, item.RouteValues)
+			}
         </div>
         }
     }
