--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -344,7 +344,6 @@
 
 				@if (Model.IsEditable)
 				{
-                    
 					<div class="checkout-buttons">
 						@if (String.IsNullOrEmpty(Model.MinOrderSubtotalWarning))
 						{
@@ -360,8 +359,11 @@
 					</div>
                     
 					<div class="addon-buttons">
-						@*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express)*@
-						@Html.Partial("_ButtonPaymentMethod", Model)
+						@*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express, Pay with Amazon)*@
+						@foreach(var item in Model.ButtonPaymentMethods.Items)
+						{
+							@Html.Action(item.ActionName, item.ControllerName, item.RouteValues)
+						}
 					</div>
 				}
 			</div>
