--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/telerik/telerik.smartstore.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/telerik/telerik.smartstore.less
@@ -222,3 +222,12 @@
 	padding: 4px 18px 4px 3px;
 }
 
+.t-grid .t-filter-options {
+	padding: 8px;
+}
+
+.t-group.t-popup {
+	background-color: #f7f7f7;
+}
+
+
