--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
@@ -17,7 +17,7 @@
             @Html.SmartLabelFor(model => model.ProductName)
         </td>
         <td class="adminData">
-            @Html.ActionLink(Model.ProductName, "Edit", "Product", new { id = Model.ProductId }, new { })
+			<a href="@Url.Action("Edit", "Product", new { id = Model.ProductId })">@Model.ProductName (@Model.ProductSku.NaIfEmpty())</a>
         </td>
     </tr>
     <tr>
@@ -33,7 +33,7 @@
             @Html.SmartLabelFor(model => model.OrderId)
         </td>
         <td class="adminData">
-            @Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Order", new { id = Model.OrderId }, new { })
+			<a href="@Url.Action("Edit", "Order", new { id = Model.OrderId })">@Model.OrderNumber</a>
         </td>
     </tr>
     <tr>
@@ -41,7 +41,7 @@
             @Html.SmartLabelFor(model => model.CustomerId)
         </td>
         <td class="adminData">
-            @Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Customer", new { id = Model.CustomerId }, new { })
+			<a href="@Url.Action("Edit", "Customer", new { id = Model.CustomerId })">@Model.CustomerFullName (@Model.CustomerId)</a>
         </td>
     </tr>
     <tr>
@@ -58,7 +58,7 @@
             @Html.SmartLabelFor(model => model.ReasonForReturn)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.ReasonForReturn)
+			@Html.DropDownListFor(model => model.ReasonForReturn, Model.AvailableReasonForReturn, new { style = "min-width: 514px;" })
             @Html.ValidationMessageFor(model => model.ReasonForReturn)
         </td>
     </tr>
@@ -67,7 +67,7 @@
             @Html.SmartLabelFor(model => model.RequestedAction)
         </td>
         <td class="adminData">
-            @Html.EditorFor(model => model.RequestedAction)
+			@Html.DropDownListFor(model => model.RequestedAction, Model.AvailableRequestedAction, new { style = "min-width: 514px;" })
             @Html.ValidationMessageFor(model => model.RequestedAction)
         </td>
     </tr>
@@ -76,7 +76,7 @@
             @Html.SmartLabelFor(model => model.CustomerComments)
         </td>
         <td class="adminData">
-            @Html.TextAreaFor(model => model.CustomerComments, new { style = "Width: 500px; Height: 150px;" })
+            @Html.TextAreaFor(model => model.CustomerComments, new { style = "min-width: 500px; min-height: 100px;" })
             @Html.ValidationMessageFor(model => model.CustomerComments)
         </td>
     </tr>
@@ -85,7 +85,7 @@
             @Html.SmartLabelFor(model => model.StaffNotes)
         </td>
         <td class="adminData">
-            @Html.TextAreaFor(model => model.StaffNotes, new { style = "Width: 500px; Height: 150px;" })
+            @Html.TextAreaFor(model => model.StaffNotes, new { style = "min-width: 500px; min-height: 100px;" })
             @Html.ValidationMessageFor(model => model.StaffNotes)
         </td>
     </tr>
