#380 Add UpdatedOnUtc field to order entity

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -934,6 +934,14 @@
                 @Html.DisplayFor(model => model.CreatedOn)
             </td>
         </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.UpdatedOn)
+            </td>
+            <td class="adminData">
+                @Html.DisplayFor(model => model.UpdatedOn)
+            </td>
+        </tr>
     </table>
 }
 @helper TabBillingInfo()
