Better return request: More improvements

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1232,7 +1232,7 @@ table.cart .cart-item-row .qty-input {
 .shipment-details .page-body{border:1px solid #d7d7d7;padding:10px;}
 .shipment-details .overview{text-align:left;padding-bottom:10px;}
 .shipment-details .tracking-url{color:#f93;text-decoration:none;}
-.shipment-details .products-box,.shipment-details .shipment-status-events-box{text-align:left;padding:10px;border:1px solid #d7d7d7;height:auto;}
+.shipment-details .products-box,.shipment-details .shipment-status-events-box{text-align:left;height:auto;}
 
 /* FEATURED PRODUCTS */
 .featured-product-grid {
