--- a/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
@@ -55,6 +55,8 @@
                     }
                 </div>
             }
+			
+			<p></p>
             <div class="shipping-address">
                 <div class="section-title">
                     @T("Order.Shipments.ShippingAddress")
@@ -95,8 +97,8 @@
                 }
             </div>
         </div>
-        <div class="clear">
-        </div>
+        <div class="clear"></div>
+
         @if (Model.Items.Count > 0)
         {
             <div class="products">
