--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
@@ -14,22 +14,6 @@
     </tr>
     <tr>
         <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.ProductName)
-        </td>
-        <td class="adminData">
-			<a href="@Url.Action("Edit", "Product", new { id = Model.ProductId })">@Model.ProductName (@Model.ProductSku.NaIfEmpty())</a>
-        </td>
-    </tr>
-    <tr>
-        <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.Quantity)
-        </td>
-        <td class="adminData">
-            @Model.Quantity
-        </td>
-    </tr>
-    <tr>
-        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.OrderId)
         </td>
         <td class="adminData">
@@ -38,10 +22,27 @@
     </tr>
     <tr>
         <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.ProductName)
+        </td>
+        <td class="adminData">
+			<a href="@Url.Action("Edit", "Product", new { id = Model.ProductId })">@Model.ProductName (@Model.ProductSku.NaIfEmpty())</a>
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.CustomerId)
         </td>
         <td class="adminData">
 			<a href="@Url.Action("Edit", "Customer", new { id = Model.CustomerId })">@Model.CustomerFullName (@Model.CustomerId)</a>
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.Quantity)
+        </td>
+        <td class="adminData">
+            @Html.EditorFor(model => model.Quantity)
+            @Html.ValidationMessageFor(model => model.Quantity)
         </td>
     </tr>
     <tr>
@@ -102,7 +103,7 @@
         <td class="adminData">
 			@if(Model.CanAccept)
 			{
-				<button type="submit" name="accept" value="accept" class="btn btn-warning" onclick="return confirm('@T("Admin.ReturnRequests.Accept.Confirm")');">
+				<button type="submit" name="accept" value="accept" class="btn btn-warning" title="@T("Admin.ReturnRequests.Accept.Hint")" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
 					<i class="icon-ok"></i>&nbsp;@T("Admin.ReturnRequests.Accept")
 				</button>
 			}
